--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
         <script>
         (function () {
             // Google Apps Script Web App endpoint for logging status reports.
-            const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzRq7LkFDgbj30RijgJv42L2aLd4oTp_pSSSFDnNq7z7aNx-ktAB-8TGKLeHdgvH9BLaw/exec?action=list";
+            const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzRq7LkFDgbj30RijgJv42L2aLd4oTp_pSSSFDnNq7z7aNx-ktAB-8TGKLeHdgvH9BLaw/exec";
 
             const REPORT_MEMORY_LIMIT = 250;
             const reportIndex = new Map();
